# ml-playground

./: .pre-commit-config.yaml  ASR_with_NeMo.ipynb  CHANGELOG.md  CONTRIBUTING.md  README.md  asr-finetune-nemotron-3.5-asr-streaming-prompt.ipynb  contrastive_loss.ipynb  justfile  pyproject.toml
.github/workflows/: prcheck.yml  pre-commit.yml  tests.yml
src/python_package_template/: __init__.py
tests/: test_my_package.py
