[project]
name = "python-package-template"
version = "0.1.0"
description = "A Template for Python Packages"
readme = "README.md"
authors = [
    { name = "MNIKIEMA", email = "nikiemamahamadi01@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
python-package-template = "python_package_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_package_template"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]


[tool.ruff]
line-length = 110
target-version = "py313"
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["python_package_template"]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Auto detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testspath = [
    "tests"
]
addopts = "-ra -q"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]