[project]
name = "ml-playground"
version = "0.1.0"
description = "A Template for Python Packages"
readme = "README.md"
authors = [
    { name = "MNIKIEMA", email = "nikiemamahamadi01@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "gliner>=0.2.24",
    "ipykernel>=7.2.0",
    "jaxtyping>=0.3.9",
    "nltk>=3.9.3",
    "spacy>=3.8.11",
    "torch>=2.8",
    "transformers>=4.57.6, <5.0.0",
]

[project.scripts]
python-package-template = "ml_playground:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_playground"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]


[tool.ruff]
line-length = 110
target-version = "py313"
exclude = [
    ".venv",
    "build",
    "dist",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "I"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ml_playground"]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Auto detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testspath = [
    "tests"
]
addopts = "-ra -q"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]
